# llm-generic-bot

./: .env.example  .gitignore  Dockerfile  NOTICE  README.md  TASKS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.example.json
config/locales/: ja.yml
docs/: pr_memo.md  roadmap.md
docs/tasks/: backlog.md  sprint1.md  sprint2.md  sprint3.md  sprint4.md
src/llm_generic_bot/: main.py
src/llm_generic_bot/adapters/: _retry.py  discord.py  misskey.py  openweather.py
src/llm_generic_bot/config/: loader.py  quotas.py
src/llm_generic_bot/core/: arbiter.py  cooldown.py  dedupe.py  formatting.py  orchestrator.py  orchestrator_metrics.py  queue.py  scheduler.py  types.py
src/llm_generic_bot/features/: dm_digest.py  news.py  omikuji.py  report.py  weather.py  weather.pyi
src/llm_generic_bot/infra/: __init__.py  metrics.py  metrics_service.py  metrics_snapshot.py
src/llm_generic_bot/runtime/: __init__.py  config_diff.py  history.py  providers.py  (+2 more)
tests/: __init__.py  test_cooldown.py  test_main_resolve_object.py
tests/adapters/: test_discord_sender.py  test_openweather.py  test_retry.py  test_retry_policy.py
tests/ci/: _yaml_stub.py  test_ci_workflow.py
tests/config/: test_loader.py  test_settings_example_cooldown.py  test_settings_example_permit.py  test_settings_example_report.py  test_settings_reload.py
tests/core/: test_coalesce_queue.py  test_cooldown_gate.py  test_metrics_boundary.py  test_metrics_formatting.py  test_orchestrator_failure_error_tags.py  test_orchestrator_metrics_failures.py  test_orchestrator_metrics_isolation.py  test_orchestrator_metrics_reporting.py  test_orchestrator_send_processing.py  test_orchestrator_weekly_snapshot.py  test_quota_gate.py  test_runtime.py  test_scheduler_jitter.py  test_structured_logging.py
tests/features/: __init__.py  test_dm_digest.py  test_news.py  test_omikuji.py  test_report.py  test_weather_cache_rotation.py  test_weather_engagement.py
tests/infra/: test_metrics.py  test_metrics_collect_snapshot_sync.py  test_metrics_reporting.py
tests/integration/: test_main_pipeline.py  test_orchestrator_imports.py  test_permit_bridge.py  test_runtime_dm_digest.py  test_runtime_multicontent.py  test_runtime_multicontent_failures.py  test_runtime_news_cooldown.py  test_runtime_reload.py  test_runtime_weather_engagement.py  test_runtime_weekly_report.py
tests/runtime/: test_config_diff.py  test_job_common.py  test_providers.py  test_setup_runtime_dedupe.py  test_setup_runtime_profiles.py  test_setup_sender.py  test_weather_jobs.py  test_weekly_report_setup.py  test_weekly_schedule_helpers.py
(+91 files in other folders)
