[project]
name = "llm-generic-bot"
version = "0.1.0"
description = "Platform-agnostic LLM bot with adaptive cooldown and weather feature"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name"}]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.8",
  "anyio>=4.4",
  "apscheduler>=3.10",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "types-requests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
