[project]
name = "llm-generic-bot"
version = "0.1.0"
description = "Platform-agnostic LLM bot with adaptive cooldown and weather feature"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name"}]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.8",
  "anyio>=4.4",
  "apscheduler>=3.10",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "types-requests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "llm_generic_bot.core.orchestrator",
    "llm_generic_bot.features.weather",
    "llm_generic_bot.main",
]
ignore_errors = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
extend-ignore = ["E401", "E501", "E701", "F401", "F841"]
