[project]
name = "llm-generic-bot"
version = "0.1.0"
description = "Platform-agnostic LLM bot with adaptive cooldown and weather feature"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name"}]
dependencies = [
  "httpx>=0.27",
  "anyio>=4.4",
  "apscheduler>=3.10",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-anyio",
  "ruff",
  "mypy",
  "types-requests",
  "pyyaml",
  "freezegun",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "llm_generic_bot.core.orchestrator",
    "llm_generic_bot.features.weather",
    "llm_generic_bot.main",
]
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F"]
extend-ignore = ["E401", "E501", "E701", "F401", "F841"]
